# substr8-cli

./: pyproject.toml
examples/agents/: README.md
examples/agents/hello-world/: IDENTITY.md  README.md  SOUL.md
examples/agents/planner/: IDENTITY.md  README.md  SOUL.md  TOOLS.md
examples/agents/research-agent/: IDENTITY.md  README.md  SOUL.md  TOOLS.md
examples/agents/reviewer/: IDENTITY.md  SOUL.md
examples/agents/writer/: IDENTITY.md  SOUL.md
substr8/: __init__.py  cli.py
substr8/fdaa/: cli.py
substr8/platform_v2/: __init__.py  cli.py  group.py
substr8/runproof/: __init__.py  cli.py
substr8/runproof/v2/: __init__.py  crypto.py  schema.py  state.py  verify.py
substr8/spechq/: __init__.py  cli.py
tests/: test_platform_shortcuts.py
